# GrokLink-OS

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  SECURITY.md  release-notes-v3.6.0.md  release-notes-v3.6.2.md  release-notes-v3.6.3.md  release-notes-v3.6.4.md  release-notes-v3.6.5.md  release-notes-v3.6.6.md  release-notes-v3.6.7.md  release-notes-v3.6.8.md  release-notes-v3.6.9.md  release-notes-v3.7.0.md
agent-skill/: README.md
agent-skill/groklink-os/: SKILL.md
agent-skill/groklink-os/references/: adaptive-learning.md  flash-and-rpc.md  legal.md  signal-observability.md
agent-skill/groklink-os/scripts/: ingest_unplugged.py  learn_from_data.py  main.py  observe_session.py  paths_util.py  (+4 more)
apps/boot/: main.c
apps/device/: README.md  main_bisect.c  main_cdc.c  main_cdc_app.c  main_os_cdc.c
bridge/: README.md  pyproject.toml
bridge/groklink_os/: __init__.py  cli.py
bridge/groklink_os/lab/: __init__.py  anomaly.py  casefile.py  engagement.py  export.py  phi.py  siem.py  vault_seal.py
bridge/groklink_os/lab_codec/: __init__.py  beacon.py  education.py  ook.py  timing.py
bridge/groklink_os/observe/: __init__.py  agent_loop.py  calibration.py  monitor.py  openai_server.py  packager.py  schema.py  store.py  tools.py
bridge/groklink_os/research/: __init__.py  plug_sync.py
bridge/groklink_os/rpc/: __init__.py  client.py
bridge/groklink_os/skills/: __init__.py  craft.py
bridge/schemas/: signal_observation.v2.json
bridge/tests/: test_agent_loop_and_serial.py  test_client_offline.py  test_lab_codec.py  test_lab_medsec.py  test_observe_pipeline.py  test_plug_sync.py  test_signal_cognition_v35.py
bridge/tests/fixtures/: lab_beacon_sample.json
docs/: ARCHITECTURE.md  BOARD_F7_CC1101.md  BUILD.md  DFU.md  EXTENSIBILITY_ML.md  FACILITY_RF_BASELINE_PLAYBOOK.md  FIELD_TEST_BRINGUP.md  FLASH_LATEST.md  FLIPPER_FLASH.md  GUI.md  HEALTHCARE_OPERATOR_RUNBOOK.md  LAB_CODEC.md  LIMITATIONS_ANALYSIS.md  MEDSEC_PILOT_IN_A_BOX.md  MEDSEC_RISK_FILE.md  MEDSEC_ROE_TEMPLATE.md  MEDSEC_SECURITY_SELF_REVIEW.md  MEDSEC_WORLDWIDE_NEXT_STEPS.md  MIGRATION.md  MIGRATION_OBSERVATION_v1_v2.md  MISSIONS.md  PLUG_SYNC_RESEARCH.md  QFLIPPER_AND_WINDOWS.md  RESOURCE_BUDGET.md  ROADMAP_3.7.md  ROADMAP_NATIVE.md  ROLLING_CODES_EDUCATION.md  SAFETY.md  SIGNAL_OBSERVABILITY.md  SKILLS.md  THREAT_MODEL.md  UNPLUGGED_AUTONOMY.md
docs/api/: RPC.md
docs/design/: v3.5-signal-cognition.md
docs/lab/: FIELD_REPORT_v3.6.0.md  FIELD_REPORT_v3.7.0.md  SIGNAL_COGNITION_PLAYBOOK.md  SIGNAL_WORLD_EXPLORATION.md  SIGNAL_WORLD_EXPLORATION_v3.5.md  field-suite-v3.6.0-packaged.json  field-suite-v3.6.0-raw.json  field-suite-v3.7.0-packaged.json  field-suite-v3.7.0-raw.json  signal-world-exploration-summary.json
drivers/src/: glk_cc1101.c  glk_gpio.c  glk_ir.c  glk_nfc.c  glk_radio.c
examples/: llm_observe_lab.py  openai_tools_example.py
hal/src/: glk_hal_host.c  glk_hal_subghz.c
kernel/src/: glk_kernel.c
landing/: deploy.cmd  wrangler.toml
landing/public/: _headers  index.html  llms.txt  robots.txt  sitemap.xml
schemas/: groklink_os.proto
scripts/: check_mojibake.py  deploy_medsec_packs.ps1  fix_mojibake_utf8.py  scan_mojibake.py
skills/templates/: skill_manifest.schema.json
tests/unit/: test_catalog.c  test_cc1101.c  test_kernel.c  test_ml.c  test_policy.c  test_rpc_frame.c
tools/: bin2dfu.py  build_dfu.ps1  device_probe.ps1  flash_cdc_via_dfu.py  flash_os_dfu_only.ps1  host_smoke.ps1  install_groklink_qflipper.ps1  recover_flipper.ps1  render_architecture.html  render_infographic.html  render_tweet_features.html  watch_plug_sync.ps1
tools/windows/: set_groklink_friendly_name.ps1
(+85 files in other folders)
